<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.main.TransactionActivity">

        <EditText
            android:id="@+id/value_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:inputType="numberSigned"
            android:text="@string/def_cash"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/value_input" />

        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:textAlignment="textStart"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/income_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/group_spinner">

            <TextView
                android:id="@+id/tv_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="3dp"
                android:text="@string/expense"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                    android:id="@+id/expense_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="16dp"
                    android:checked="true" tools:ignore="UseSwitchCompatOrMaterialXml"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="3dp"
                android:text="@string/date"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/guideline2"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/date_spinner"
                style="@android:style/Widget.Holo.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/def_date"
                app:layout_constraintTop_toBottomOf="@id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:hint="@string/description"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@id/income_expense" tools:ignore="RtlHardcoded"/>


        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>